trunk/Archive2/62/f813a0a206205e/output
+ clang++ -std=c++14 -fsanitize=undefined,signed-integer-overflow -O3 -Wall -Wextra -Wconversion -pedantic -Wall -pthread main.cpp
main.cpp:8:39: warning: unused parameter 'a' [-Wunused-parameter]
    static T test( const std::string &a  ) { std::cout << "default\n"  ;return T() ; } 
                                      ^
main.cpp:14:48: warning: unused parameter 'a' [-Wunused-parameter]
    static inline int test( const std::string &a  )
                                               ^
main.cpp:25:60: warning: unused parameter 'a' [-Wunused-parameter]
    static inline std::array<T,N> test( const std::string &a )
                                                           ^
main.cpp:47:25: error: type 'double' cannot be narrowed to 'short' in initializer list [-Wc++11-narrowing]
    constexpr  short t1{10.33224} ;
                        ^~~~~~~~
main.cpp:47:25: note: insert an explicit cast to silence this issue
    constexpr  short t1{10.33224} ;
                        ^~~~~~~~
                        static_cast<short>( )
main.cpp:47:25: warning: implicit conversion from 'double' to 'short' changes value from 10.33224 to 10 [-Wliteral-conversion]
    constexpr  short t1{10.33224} ;
                       ~^~~~~~~~
main.cpp:48:19: warning: unused variable 't2' [-Wunused-variable]
    constexpr int t2 = t1 ;
                  ^
main.cpp:49:9: warning: unused variable 'x' [-Wunused-variable]
    int x = 10 ;
        ^
main.cpp:50:25: warning: unused variable 'arr' [-Wunused-variable]
    std::array<int, 10> arr = {{0}} ;
                        ^
7 warnings and 1 error generated.
